@@ -1,5 +1,5 @@
 #
-# $Id: ttk.tcl,v 1.10 2008/12/05 11:11:58 patthoyts Exp $
+# $Id: ttk.tcl,v 1.11 2010/06/15 16:59:16 jenglish Exp $
 #
 # Ttk widget set initialization script.
 #
@@ -44,8 +44,11 @@ proc ttk::deprecated'warning {old new} {
 
 ### Backward-compatibility.
 #
-
-package ifneeded tile 0.8.0 { package require Tk ; package provide tile 0.8.0 }
+#
+# Make [package require tile] an effective no-op;
+# see SF#3016598 for discussion.
+#
+package ifneeded tile 0.8.6 { package provide tile 0.8.6 }
 
 # ttk::panedwindow used to be named ttk::paned.  Keep the alias for now.
 #
@@ -144,7 +147,7 @@ ttk::LoadThemes; rename ::ttk::LoadThemes {}
 
 ### Select platform-specific default theme:
 #
-# Notes: 
+# Notes:
 #	+ On OSX, aqua theme is the default
 #	+ On Windows, xpnative takes precedence over winnative if available.
 #	+ On X11, users can use the X resource database to
